# RundiInterpreter

./: Cargo.toml  README.md
.kiro/specs/Rundi-specs/: tasks.md
.kiro/specs/ubumenyi-programming-language/: requirements.md
specs/specs/ubumenyi-programming-language/: architecture.md  design.md
src/: Tokenizer.rs  environment.rs  interpreter.rs  lib.rs  main.rs  parser.rs  reader.rs
src/ast/: ast.rs  mod.rs
src/environment/: environment.rs  mod.rs
src/error/: error.rs  mod.rs
src/evaluator/: evaluator.rs  mod.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/repl/: mod.rs  reader.rs
src/tests/: integration_test.rs  mod.rs
src/tokenizer/: mod.rs  tokenizer.rs
