[package]
name = "rundi_interpreter"
version = "0.1.0"
edition = "2024"

# Optional dependencies can be added here
# dependencies = { "some_dependency" = "version" }

[dependencies]
# Add your project dependencies here
# Example: serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# Add your development dependencies here
# Example: tokio = { version = "1", features = ["full"] }